ajout de lien + un peu de responsive test

--- a/home/home.html
+++ b/home/home.html
@@ -14,10 +14,12 @@
 	</head>
 	<body>
 		<header>
-			<img src="../img/Plan de travail 6.png" alt="" />
+			<a href="../bienvenue/bienvenue.html"
+				><img src="../img/Plan de travail 6.png" alt=""
+			/></a>
 			<a href="">Home</a>
-			<a href="">Galerie</a>
-			<a href="">Se connecter</a>
+			<a href="../galerie/galerie.html">Galerie</a>
+			<a href="../login/se_connecter.php">Se connecter</a>
 			<a href="../inscription/formulaire_inscription.php">S'inscrire</a>
 		</header>
 		<div id="slider">
