--- a/bienvenue/bienvenue.html
+++ b/bienvenue/bienvenue.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="bienvenue.css" />
 		<title>Bienvenue</title>
 	</head>
 	<body>
 		<div class="container">
-			<h2><span>Bienvenue sur</span><br />Piclip</h2>
+			<h2>
+				<a href="../home/home.html">
+					<span>Bienvenue sur</span><br />Piclip
+				</a>
+			</h2>
 		</div>
 
 		<script src="anime.min.js"></script>
