--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../css/photo_click.css" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-			rel="stylesheet"
-		/>
-		<title>Photo</title>
+		<link rel="stylesheet" href="../css/galerie.css" />
+		<title>Galerie</title>
 	</head>
 	<body>
 		<header>
@@ -22,26 +17,14 @@
 			<a href="">Se déconnecter</a>
 			<a href="../inscription/formulaire_inscription.php">S'inscrire</a>
 		</header>
-
-		<h1>Photos</h1>
-		<div class="photos">
-			<div class="card">
-				<img src="../img/1.jpg" alt="" />
-				<h3 class="titre">Titre</h3>
-				<h2 class="pseudo">@pseudo</h2>
-				<p>
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-					Fugiat nulla repellat maiores delectus assumenda vel placeat
-					illum beatae quos? Quam laudantium, quo inventore quas vel
-					aliquid officiis et doloribus consectetur?Lorem ipsum, dolor
-					sit amet consectetur adipisicing elit. Fugiat nulla repellat
-					maiores delectus assumenda vel placeat illum beatae quos?
-					Quam laudantium, quo inventore quas vel aliquid officiis et
-					doloribus consectetur?
-				</p>
-			</div>
+		<div class="container">
+			<a href="../galerie_photos/galerie_photos.html"
+				><span>Galerie Photos</span></a
+			>
+			<a href="../galerie_videos/galerie_videos.html"
+				><span>Galerie Vidéos</span></a
+			>
 		</div>
-
 		<footer>
 			<div class="block1">
 				<h4>Conditions d'utilisation</h4>
@@ -51,8 +34,7 @@
 			<div class="block2">
 				<h4>Politique de confidentialité</h4>
 				<h4 href="../login/se_connecter.php">Se connecter</h4>
-				<h4>
-					<a href="../inscription/formulaire_inscription.php"></a>
+				<h4 href="../inscription/formulaire_inscription.php">
 					S'inscrire
 				</h4>
 			</div>
