--- a/galerie_videos/galerie_videos.html
+++ b/galerie_videos/galerie_videos.html
@@ -14,10 +14,12 @@
 	</head>
 	<body>
 		<header>
-			<img src="../img/Plan de travail 6.png" alt="" />
-			<a href="">Home</a>
-			<a href="">Galerie</a>
-			<a href="">Se connecter</a>
+			<a href="../bienvenue/bienvenue.html"
+				><img src="../img/Plan de travail 6.png" alt=""
+			/></a>
+			<a href="../home/home.html">Home</a>
+			<a href="../galerie/galerie.html">Galerie</a>
+			<a href="">Se déconnecter</a>
 			<a href="../inscription/formulaire_inscription.php">S'inscrire</a>
 		</header>
 
@@ -178,13 +180,15 @@
 		<footer>
 			<div class="block1">
 				<h4>Conditions d'utilisation</h4>
-				<h4>Home</h4>
-				<h4>Galerie</h4>
+				<h4 href="../home/home.html">Home</h4>
+				<h4 href="../galerie/galerie.html">Galerie</h4>
 			</div>
 			<div class="block2">
 				<h4>Politique de confidentialité</h4>
-				<h4>Se connecter</h4>
-				<h4>S'inscrire</h4>
+				<h4 href="../login/se_connecter.php">Se connecter</h4>
+				<h4 href="../inscription/formulaire_inscription.php">
+					S'inscrire
+				</h4>
 			</div>
 			<div class="block3">
 				<h4>Aide</h4>
@@ -192,7 +196,9 @@
 			</div>
 			<div class="block4">
 				<h4>A propos</h4>
-				<img src="../img/Plan de travail 16.png" alt="" />
+				<a href="../bienvenue/bienvenue.html"
+					><img src="../img/Plan de travail 16.png" alt=""
+				/></a>
 			</div>
 		</footer>
 	</body>
