--- a/poste_video/poste_video.html
+++ b/poste_video/poste_video.html
@@ -14,10 +14,12 @@
 	</head>
 	<body>
 		<header>
-			<img src="../img/Plan de travail 6.png" alt="" />
-			<a href="">Home</a>
-			<a href="">Galerie</a>
-			<a href="">Se connecter</a>
+			<a href="../bienvenue/bienvenue.html"
+				><img src="../img/Plan de travail 6.png" alt=""
+			/></a>
+			<a href="../home/home.html">Home</a>
+			<a href="../galerie/galerie.html">Galerie</a>
+			<a href="">Se déconnecter</a>
 			<a href="../inscription/formulaire_inscription.php">S'inscrire</a>
 		</header>
 
