--- a/video_click/video_click.html
+++ b/video_click/video_click.html
@@ -43,13 +43,17 @@
 		<footer>
 			<div class="block1">
 				<h4>Conditions d'utilisation</h4>
-				<h4>Home</h4>
-				<h4>Galerie</h4>
+				<h4><a href="../home/home.html">Home</a></h4>
+				<h4><a href="../galerie/galerie.html">Galerie</a></h4>
 			</div>
 			<div class="block2">
 				<h4>Politique de confidentialité</h4>
-				<h4>Se connecter</h4>
-				<h4>S'inscrire</h4>
+				<h4><a href="../login/se_connecter.php">Se connecter</a></h4>
+				<h4>
+					<a href="../inscription/formulaire_inscription.php">
+						S'inscrire</a
+					>
+				</h4>
 			</div>
 			<div class="block3">
 				<h4>Aide</h4>
@@ -57,7 +61,9 @@
 			</div>
 			<div class="block4">
 				<h4>A propos</h4>
-				<img src="../img/Plan de travail 16.png" alt="" />
+				<a href="../bienvenue/bienvenue.html"
+					><img src="../img/Plan de travail 16.png" alt=""
+				/></a>
 			</div>
 		</footer>
 	</body>
