deco sur toutes les pages

--- a/poste_video/poste_video.html
+++ b/poste_video/poste_video.html
@@ -13,15 +13,14 @@
 		<title>poste video</title>
 	</head>
 	<body>
-		<header>
-			<a href="../bienvenue/bienvenue.html"
-				><img src="../img/Plan de travail 6.png" alt=""
-			/></a>
-			<a href="../home/home.html">Home</a>
-			<a href="../galerie/galerie.html">Galerie</a>
-			<a href="">Se déconnecter</a>
+		<?php include("../navbar/navbar.php"); ?>
+		<!--<header>
+			<img src="../img/Plan de travail 6.png" alt="" />
+			<a href="">Home</a>
+			<a href="">Galerie</a>
+			<a href="">Se connecter</a>
 			<a href="../inscription/formulaire_inscription.php">S'inscrire</a>
-		</header>
+		</header>-->
 
 		<h1>Poste des vidéos</h1>
 		<div class="photos">
