--- a/bienvenue/bienvenue.html
+++ b/bienvenue/bienvenue.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container">
 			<h2>
-				<a href="../home/home.html">
+				<a href="../home/home.php">
 					<span>Bienvenue sur</span><br />Piclip
 				</a>
 			</h2>
